--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "version": "0.0.1",
-  "homepage": "https://moshir.dev",
+  "homepage": "moshir.dev",
   "type": "module",
   "scripts": {
     "dev": "vite",
