--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,21 +14,23 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Update to version 3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3  # Update to version 3
       with:
-        node-version: '16'
+        node-version: '20'  # Update to Node.js 20
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./app  # Adjust this to the correct directory
 
     - name: Build the project
       run: npm run build
+      working-directory: ./app  # Adjust this to the correct directory
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        publish_dir: ./app/dist  # Adjust this to the correct directory
