--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "front-matter": "^4.0.2",
+    "marked": "^12.0.2",
     "matter-js": "^0.19.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
